<?xml version="1.0"?>
<package format="3">
  <name>sensor_pkg</name>
  <version>0.1.0</version>
  <description>The sensor_pkg package</description>

  <maintainer email="lucas.combe@gmail.com">lucas</maintainer>

  <license>BSD</license>

  <author email="lucas.combe@gmail.com">Lucas Combe</author>
 
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>

  </export>
</package>
